--- a/pipelines/lab3pipeline.yaml
+++ b/pipelines/lab3pipeline.yaml
@@ -7,11 +7,11 @@ pr: none
 
 variables:
   - name: backendServiceArm
-    value: 'azure-devops-journey-service-connection'
+    value: 'aksadvanced_serv_con'
   - name: backendAzureRmResourceGroupName
-    value: 'devops-journey-rg'
+    value: 'WTC_SOL1'
   - name: backendAzureRmStorageAccountName
-    value: 'devopsjourneyazuredevops'
+    value: 'aksadvancedstore'
   - name: backendAzureRmContainerName
     value: 'tfstate'
   - name: backendAzureRmKey
@@ -19,13 +19,13 @@ variables:
   - name: environment
     value: 'production'
   - name: terraform_version
-    value: '1.2.6'
+    value: '1.4.6'
   - name: repository
-    value: 'devopsjourney'
+    value: 'aspnet'
   - name: dockerfile
     value: '$(Build.SourcesDirectory)/aspnet-core-dotnet-core/Dockerfile'
   - name: containerRegistry
-    value: 'devopsjourneyacr.azurecr.io'
+    value: 'aksadvancedacr.azurecr.io'
 
 stages :
   - stage: validate
