--- a/pipelines/lab5pipeline.yaml
+++ b/pipelines/lab5pipeline.yaml
@@ -11,11 +11,11 @@ pr: none
 
 variables:
   - name: backendServiceArm
-    value: 'azure-devops-journey-service-connection'
+    value: 'aksadvanced_serv_con'
   - name: backendAzureRmResourceGroupName
-    value: 'devops-journey-rg'
+    value: 'WTC_SOL1'
   - name: backendAzureRmStorageAccountName
-    value: 'devopsjourneyazuredevops'
+    value: 'aksadvancedstore'
   - name: backendAzureRmContainerName
     value: 'tfstate'
   - name: backendAzureRmKey
@@ -23,14 +23,13 @@ variables:
   - name: environment
     value: 'production'
   - name: terraform_version
-    value: '1.2.6'
+    value: '1.4.6'
   - name: repository
     value: 'aspnet'
   - name: dockerfile
     value: '$(Build.SourcesDirectory)/aspnet-core-dotnet-core/Dockerfile'
   - name: containerRegistry
-    value: 'devopsjourneyacr.azurecr.io'
-  - group: devopsjourney
+    value: 'aksadvancedacr.azurecr.io'
 
 stages :
   - stage: validate
@@ -158,8 +157,8 @@ stages :
           inlineScript: |
             #!/usr/bin/env bash
             set -x
-            AKS_RG="devopsjourneyaks-rg"
-            AKS_NAME="devopsjourneyaks"
+            AKS_RG="WTC_SOL1"
+            AKS_NAME="aksadvancedcluster"
 
             # Get AKS Credentials
             az aks get-credentials -g $AKS_RG -n $AKS_NAME --admin
