--- a/pipelines/scripts/aspnet.yaml
+++ b/pipelines/scripts/aspnet.yaml
@@ -2,13 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: aspnetcore
+  labels:
+    app: aspnetcore
+  namespace: aspnetcore
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: aspnetcore
   template:
     metadata:
+      name: aspnetcore
       labels:
         app: aspnetcore
     spec:
@@ -16,7 +20,7 @@ spec:
         "kubernetes.io/os": linux
       containers:
       - name: aspnetcore
-        image: devopsjourneyacr.azurecr.io/aspnet:latest
+        image: aksadvancedacr.azurecr.io/aspnet:latest
         imagePullPolicy: Always
         resources:
           requests:
@@ -27,17 +31,14 @@ spec:
             memory: 256Mi
         ports:
         - containerPort: 80
-        env:
-        - name: APPINSIGHTS_INSTRUMENTATIONKEY
-          valueFrom:
-            secretKeyRef:
-              name: aikey
-              key: aisecret
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: aspnetcore
+  labels:
+    app: aspnetcore
+  namespace: aspnetcore
 spec:
   type: LoadBalancer
   ports:
@@ -45,7 +46,7 @@ spec:
   selector:
     app: aspnetcore
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: aspnetcore
